--- a/UK Crime ETL & Analysis/ETL.ipynb
+++ b/UK Crime ETL & Analysis/ETL.ipynb
@@ -26,12 +26,12 @@
    "id": "905c0a6d-5811-40df-a9cf-97434c4eb343",
    "metadata": {},
    "source": [
-    "*Parse Crimes Class*"
+    "*Crimes Class*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e7fc147f-d5a8-4933-a4a5-abc331e7025b",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "771bd668-1b27-40e4-bdd0-21b260205fb8",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
    ],
    "source": [
     "etl_session = extract_transform_load_data()\n",
-    "etl_session.load_repo(2023, 8)"
+    "etl_session.load_repo(2023, 7)"
    ]
   }
  ],
